Refactor OSMDataReader to allow access to data for multiple tiles or bounds